# Soundbars

./: package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.css  App.tsx  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs  note.rs
src-tauri/src/logic/: error.rs  logging.rs  mod.rs  note_window.rs  setup.rs
src/layouts/: main-layout.tsx  setup-layout.tsx
src/routes/: about.tsx  main.tsx  new-note.tsx  not-found.tsx  note.tsx
src/routes/setup/: index.tsx
