[package]
name = "stickynow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-specta = { version = "=2.0.0-rc.10", features = [
    "javascript",
    "typescript",
] }
tauri-plugin-sql = { version = "2.0.0-beta.4", features = ["sqlite"] }
specta = { version = "=2.0.0-rc.12", features = ["chrono"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "chrono"
] }
welds = { version = "0.3", features = [
    "sqlite",
    "check",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctor = "0.2.8"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "2"
chrono = { version = "0.4.38", features = ["serde"] }
dirs-2 = "3.0.1"
human-errors = "0.1.3"
include_dir = { version = "0.7.3", features = ["metadata"] }
